[package]
name = "renegade-dealer-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-mpc = { git = "https://github.com/renegade-fi/ark-mpc.git" }

k256 = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8"

[dev-dependencies]
rand = "0.8"
