[package]
name = "renegade-dealer"
version = "0.1.0"
edition = "2021"

[dependencies]
# === HTTP Server === #
http-body-util = "0.1.0"
warp = "0.3"
renegade-dealer-api = { path = "../renegade-dealer-api" }

# === Cryptography === #
ark-bn254 = "0.4"
ark-mpc = { git = "https://github.com/renegade-fi/ark-mpc.git" }
k256 = "0.13"

# === Misc === #
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.12"
rand = "0.8"
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
k256 = "0.13"
